--- a/test2.ipynb
+++ b/test2.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "39086500",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.16.2\n",
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([[0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,7 +28,10 @@
    "source": [
     "import numpy as np\n",
     "import commonfuc as cf\n",
+    "import tensorflow as tf\n",
     "\n",
+    "print(tf.__version__)\n",
+    "print(tf.config.list_physical_devices('GPU'))\n",
     "\n",
     "cf.one_hot(4, 3)\n"
    ]
@@ -421,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
