--- a/test.ipynb
+++ b/test.ipynb
@@ -769,11 +769,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "34d8e809",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "dict = defaultdict(lambda x: np.zeros(4))\n",
+    "dict[0] = 3\n",
+    "dict[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "76b5ceec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 1],\n",
+       "        [2, 2],\n",
+       "        [3, 3]]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = [1,2,3]\n",
+    "\n",
+    "np.dstack([a, b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e7432197",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 1],\n",
+       "        [2, 1]],\n",
+       "\n",
+       "       [[1, 2],\n",
+       "        [2, 2]]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, b = np.meshgrid(np.arange(1,3), np.arange(1,3))\n",
+    "\n",
+    "np.dstack([a, b])\n"
+   ]
   }
  ],
  "metadata": {
