--- a/test.ipynb
+++ b/test.ipynb
@@ -845,6 +845,31 @@
     "\n",
     "np.dstack([a, b])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3ea3777b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 2], dtype=int64),)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([1,0,1,0])\n",
+    "np.nonzero(a == 1)"
+   ]
   }
  ],
  "metadata": {
